<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_hub"
        android:contentDescription="@string/title_hub"
        android:icon="@drawable/ic_home_outline"
        android:title="@string/title_hub" />

    <item
        android:id="@+id/navigation_fixtures"
        android:contentDescription="@string/title_fixtures"
        android:icon="@drawable/ic_calendar_outline"
        android:title="@string/title_fixtures" />

    <item
        android:id="@+id/navigation_stats"
        android:contentDescription="@string/title_stats"
        android:icon="@drawable/ic_analytics_outline"
        android:title="@string/title_stats" />

    <item
        android:id="@+id/navigation_team"
        android:contentDescription="@string/title_team"
        android:icon="@drawable/ic_strategy_outline"
        android:title="@string/title_team" />

</menu>
