<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SetupActivity"
    android:background="@color/colorSurface"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@android:color/white"
        android:fontFamily="sans-serif-condensed-medium"
        android:textSize="32sp"
        android:layout_gravity="center"
        android:layout_marginTop="56dp"
        />

    <ImageView
        android:layout_width="144dp"
        android:layout_height="144dp"
        android:src="@drawable/product_logo"
        android:layout_marginTop="64dp"
        android:layout_gravity="center"
        android:contentDescription="@string/setup_image_desc" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/team_name"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        app:boxBackgroundColor="@color/colorEditTextBg"
        android:layout_marginStart="@dimen/content_margin"
        android:layout_marginEnd="@dimen/content_margin"
        android:layout_marginTop="48dp"
        app:boxStrokeColor="@color/colorPrimary"
        android:textColorHint="@color/colorTextSecondary">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:textColor="@color/colorTextPrimary"
            android:layout_height="wrap_content"
            android:id="@+id/edit_text_field"
            android:fontFamily="sans-serif-condensed"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/continue_text"
        android:id="@+id/continue_button"
        android:textColor="#FFFFFF"
        android:layout_gravity="center"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_marginTop="104dp"
        android:padding="16dp"
        android:fontFamily="sans-serif-condensed-medium"/>
</LinearLayout>