<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical"
    tools:context=".onboarding.OnboardingActivity">

    <TextView
        android:id="@+id/team_name_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="56dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/app_name"
        android:textColor="@android:color/white"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/app_logo"
        android:layout_width="144dp"
        android:layout_height="144dp"
        android:layout_gravity="center"
        android:layout_marginTop="64dp"
        android:contentDescription="@string/setup_image_desc"
        android:src="@drawable/product_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/team_name_text_view" />

    <TextView
        android:id="@+id/team_name_prompt_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="56dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/team_name_prompt"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_logo" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_text_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/content_margin"
        android:layout_marginTop="48dp"
        android:hint="@string/team_name"
        android:textColorHint="@color/colorTextSecondary"
        app:boxBackgroundColor="@color/colorEditTextBg"
        app:boxStrokeColor="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/team_name_prompt_text_view">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:textColor="@color/colorTextPrimary" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/continue_button"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/continue_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_text_layout" />
</androidx.constraintlayout.widget.ConstraintLayout>